@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -126,7 +126,7 @@ public class AutomationCommandList extends AutomationCommand {
             }
             if (getLocale) {
                 String l = parameterValue;
-                locale = new Locale(l);
+                locale = Locale.of(l);
                 getLocale = false;
             }
             if (getId && getLocale) {
