@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,9 +16,11 @@ import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.collection.IsCollectionWithSize.hasSize;
 import static org.hamcrest.collection.IsEmptyCollection.empty;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
@@ -40,16 +42,19 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
+import org.openhab.core.i18n.TimeZoneProvider;
 import org.openhab.core.io.rest.LocaleService;
 import org.openhab.core.io.rest.sitemap.SitemapSubscriptionService;
 import org.openhab.core.items.GenericItem;
 import org.openhab.core.items.ItemNotFoundException;
 import org.openhab.core.items.events.ItemEvent;
 import org.openhab.core.library.types.OnOffType;
+import org.openhab.core.library.types.OpenClosedType;
 import org.openhab.core.library.types.PercentType;
 import org.openhab.core.model.sitemap.SitemapProvider;
 import org.openhab.core.model.sitemap.sitemap.ColorArray;
 import org.openhab.core.model.sitemap.sitemap.Condition;
+import org.openhab.core.model.sitemap.sitemap.Group;
 import org.openhab.core.model.sitemap.sitemap.IconRule;
 import org.openhab.core.model.sitemap.sitemap.Sitemap;
 import org.openhab.core.model.sitemap.sitemap.VisibilityRule;
@@ -59,6 +64,7 @@ import org.openhab.core.types.Command;
 import org.openhab.core.types.State;
 import org.openhab.core.ui.items.ItemUIRegistry;
 import org.openhab.core.ui.items.ItemUIRegistry.WidgetLabelSource;
+import org.osgi.framework.BundleContext;
 
 /**
  * Test aspects of the {@link SitemapResource}.
@@ -68,13 +74,14 @@ import org.openhab.core.ui.items.ItemUIRegistry.WidgetLabelSource;
  */
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
-@NonNullByDefault
 public class SitemapResourceTest extends JavaTest {
 
     private static final int STATE_UPDATE_WAIT_TIME = 100;
 
     private static final String HTTP_HEADER_X_ATMOSPHERE_TRANSPORT = "X-Atmosphere-Transport";
     private static final String ITEM_NAME = "itemName";
+
+    private static final String SUBPAGE_ITEM_NAME = "subpabeItemName";
     private static final String ITEM_LABEL = "item label";
     private static final String SITEMAP_PATH = "/sitemaps";
     private static final String SITEMAP_MODEL_NAME = "sitemapModel";
@@ -87,16 +94,22 @@ public class SitemapResourceTest extends JavaTest {
     private static final String ICON_ITEM_NAME = "iconItemName";
     private static final String WIDGET1_LABEL = "widget 1";
     private static final String WIDGET3_LABEL = "widget 3";
+    private static final String GROUP_LABEL = "frame";
+    private static final String WIDGET4_LABEL = "widget 4";
     private static final String WIDGET1_ID = "00";
     private static final String WIDGET2_ID = "01";
     private static final String WIDGET3_ID = "02";
+    private static final String FRAME_ID = "03";
+    private static final String WIDGET4_ID = "04";
     private static final String WIDGET1_ICON = "icon1";
     private static final String WIDGET2_ICON = "icon2";
     private static final String WIDGET3_ICON = "icon3";
+    private static final String GROUP_ICON = "frame";
+    private static final String WIDGET4_ICON = "icon4";
     private static final String CLIENT_IP = "127.0.0.1";
 
     private @NonNullByDefault({}) SitemapResource sitemapResource;
-
+    private @NonNullByDefault({}) SitemapSubscriptionService subscriptions;
     private @NonNullByDefault({}) GenericItem item;
     private @NonNullByDefault({}) GenericItem visibilityRuleItem;
     private @NonNullByDefault({}) GenericItem labelColorItem;
@@ -107,17 +120,23 @@ public class SitemapResourceTest extends JavaTest {
     private @Mock @NonNullByDefault({}) HttpHeaders headersMock;
     private @Mock @NonNullByDefault({}) Sitemap defaultSitemapMock;
     private @Mock @NonNullByDefault({}) ItemUIRegistry itemUIRegistryMock;
+    private @Mock @NonNullByDefault({}) TimeZoneProvider timeZoneProviderMock;
     private @Mock @NonNullByDefault({}) LocaleService localeServiceMock;
     private @Mock @NonNullByDefault({}) HttpServletRequest requestMock;
     private @Mock @NonNullByDefault({}) SitemapProvider sitemapProviderMock;
-    private @Mock @NonNullByDefault({}) SitemapSubscriptionService subscriptionsMock;
     private @Mock @NonNullByDefault({}) UriInfo uriInfoMock;
+    private @Mock @NonNullByDefault({}) BundleContext bundleContextMock;
 
     private EList<Widget> widgets = new BasicEList<>();
 
     @BeforeEach
     public void setup() throws Exception {
-        sitemapResource = new SitemapResource(itemUIRegistryMock, localeServiceMock, subscriptionsMock);
+        subscriptions = new SitemapSubscriptionService(Collections.emptyMap(), itemUIRegistryMock, timeZoneProviderMock,
+                bundleContextMock);
+        subscriptions.addSitemapProvider(sitemapProviderMock);
+
+        sitemapResource = new SitemapResource(itemUIRegistryMock, localeServiceMock, timeZoneProviderMock,
+                subscriptions);
 
         when(uriInfoMock.getAbsolutePathBuilder()).thenReturn(UriBuilder.fromPath(SITEMAP_PATH));
         when(uriInfoMock.getBaseUriBuilder()).thenReturn(UriBuilder.fromPath(SITEMAP_PATH));
@@ -139,7 +158,7 @@ public class SitemapResourceTest extends JavaTest {
         configureSitemapMock();
         sitemapResource.addSitemapProvider(sitemapProviderMock);
 
-        widgets = initSitemapWidgets();
+        widgets = initSitemapWidgetsWithSubpages();
         configureItemUIRegistry(PercentType.HUNDRED, OnOffType.ON);
 
         // Disable long polling
@@ -168,17 +187,32 @@ public class SitemapResourceTest extends JavaTest {
     }
 
     @Test
-    public void whenLongPollingShouldObserveItems() {
+    public void whenLongPollingWholeSitemapShouldObserveAllItems() throws ItemNotFoundException {
+        configureItemUIRegistryWithSubpages(PercentType.HUNDRED, OnOffType.ON, OpenClosedType.OPEN);
+
         ItemEvent itemEvent = mock(ItemEvent.class);
         when(itemEvent.getItemName()).thenReturn(item.getName());
-        new Thread(() -> {
-            try {
-                Thread.sleep(STATE_UPDATE_WAIT_TIME); // wait for the #getPageData call and listeners to attach to the
-                                                      // item
-                sitemapResource.receive(itemEvent);
-            } catch (InterruptedException e) {
-            }
-        }).start();
+        executeWithDelay(() -> sitemapResource.receive(itemEvent));
+
+        // non-null is sufficient here.
+        when(headersMock.getRequestHeader(HTTP_HEADER_X_ATMOSPHERE_TRANSPORT)).thenReturn(List.of());
+
+        Response response = sitemapResource.getSitemapData(headersMock, null, SITEMAP_MODEL_NAME, null, false);
+
+        SitemapDTO sitemapDTO = (SitemapDTO) response.getEntity();
+        // assert that the item state change did trigger the blocking method to return
+        assertThat(sitemapDTO.homepage.timeout, is(false));
+    }
+
+    @Test
+    public void whenLongPollingSpecificPageMustNotObserveAllItems() throws ItemNotFoundException {
+        configureItemUIRegistryWithSubpages(PercentType.HUNDRED, OnOffType.ON, OpenClosedType.OPEN);
+
+        // TODO it would be cooler to not wait 30s in this test because SitemapResource has that hardcoded timeout
+
+        ItemEvent itemEvent = mock(ItemEvent.class);
+        when(itemEvent.getItemName()).thenReturn(item.getName());
+        executeWithDelay(() -> sitemapResource.receive(itemEvent));
 
         // non-null is sufficient here.
         when(headersMock.getRequestHeader(HTTP_HEADER_X_ATMOSPHERE_TRANSPORT)).thenReturn(List.of());
@@ -187,22 +221,32 @@ public class SitemapResourceTest extends JavaTest {
                 false);
 
         PageDTO pageDTO = (PageDTO) response.getEntity();
-        assertThat(pageDTO.timeout, is(false)); // assert that the item state change did trigger the blocking method to
-                                                // return
+        // assert that the item state change did trigger the blocking method to return
+        assertThat(pageDTO.timeout, is(true));
+    }
+
+    @Test
+    public void whenLongPollingShouldObserveItems() {
+        ItemEvent itemEvent = mock(ItemEvent.class);
+        when(itemEvent.getItemName()).thenReturn(item.getName());
+        executeWithDelay(() -> sitemapResource.receive(itemEvent));
+
+        // non-null is sufficient here.
+        when(headersMock.getRequestHeader(HTTP_HEADER_X_ATMOSPHERE_TRANSPORT)).thenReturn(List.of());
+
+        Response response = sitemapResource.getPageData(headersMock, null, SITEMAP_MODEL_NAME, SITEMAP_NAME, null,
+                false);
+
+        PageDTO pageDTO = (PageDTO) response.getEntity();
+        // assert that the item state change did trigger the blocking method to return
+        assertThat(pageDTO.timeout, is(false));
     }
 
     @Test
     public void whenLongPollingShouldObserveItemsFromVisibilityRules() {
         ItemEvent itemEvent = mock(ItemEvent.class);
         when(itemEvent.getItemName()).thenReturn(visibilityRuleItem.getName());
-        new Thread(() -> {
-            try {
-                Thread.sleep(STATE_UPDATE_WAIT_TIME); // wait for the #getPageData call and listeners to attach to the
-                                                      // item
-                sitemapResource.receive(itemEvent);
-            } catch (InterruptedException e) {
-            }
-        }).start();
+        executeWithDelay(() -> sitemapResource.receive(itemEvent));
 
         // non-null is sufficient here.
         when(headersMock.getRequestHeader(HTTP_HEADER_X_ATMOSPHERE_TRANSPORT)).thenReturn(List.of());
@@ -211,22 +255,15 @@ public class SitemapResourceTest extends JavaTest {
                 false);
 
         PageDTO pageDTO = (PageDTO) response.getEntity();
-        assertThat(pageDTO.timeout, is(false)); // assert that the item state change did trigger the blocking method to
-                                                // return
+        // assert that the item state change did trigger the blocking method to return
+        assertThat(pageDTO.timeout, is(false));
     }
 
     @Test
     public void whenLongPollingShouldObserveItemsFromLabelColorConditions() {
         ItemEvent itemEvent = mock(ItemEvent.class);
         when(itemEvent.getItemName()).thenReturn(labelColorItem.getName());
-        new Thread(() -> {
-            try {
-                Thread.sleep(STATE_UPDATE_WAIT_TIME); // wait for the #getPageData call and listeners to attach to the
-                                                      // item
-                sitemapResource.receive(itemEvent);
-            } catch (InterruptedException e) {
-            }
-        }).start();
+        executeWithDelay(() -> sitemapResource.receive(itemEvent));
 
         // non-null is sufficient here.
         when(headersMock.getRequestHeader(HTTP_HEADER_X_ATMOSPHERE_TRANSPORT)).thenReturn(List.of());
@@ -235,22 +272,15 @@ public class SitemapResourceTest extends JavaTest {
                 false);
 
         PageDTO pageDTO = (PageDTO) response.getEntity();
-        assertThat(pageDTO.timeout, is(false)); // assert that the item state change did trigger the blocking method to
-                                                // return
+        // assert that the item state change did trigger the blocking method to return
+        assertThat(pageDTO.timeout, is(false));
     }
 
     @Test
     public void whenLongPollingShouldObserveItemsFromValueColorConditions() {
         ItemEvent itemEvent = mock(ItemEvent.class);
         when(itemEvent.getItemName()).thenReturn(valueColorItem.getName());
-        new Thread(() -> {
-            try {
-                Thread.sleep(STATE_UPDATE_WAIT_TIME); // wait for the #getPageData call and listeners to attach to the
-                                                      // item
-                sitemapResource.receive(itemEvent);
-            } catch (InterruptedException e) {
-            }
-        }).start();
+        executeWithDelay(() -> sitemapResource.receive(itemEvent));
 
         // non-null is sufficient here.
         when(headersMock.getRequestHeader(HTTP_HEADER_X_ATMOSPHERE_TRANSPORT)).thenReturn(List.of());
@@ -267,14 +297,7 @@ public class SitemapResourceTest extends JavaTest {
     public void whenLongPollingShouldObserveItemsFromIconColorConditions() {
         ItemEvent itemEvent = mock(ItemEvent.class);
         when(itemEvent.getItemName()).thenReturn(iconColorItem.getName());
-        new Thread(() -> {
-            try {
-                Thread.sleep(STATE_UPDATE_WAIT_TIME); // wait for the #getPageData call and listeners to attach to the
-                                                      // item
-                sitemapResource.receive(itemEvent);
-            } catch (InterruptedException e) {
-            }
-        }).start();
+        executeWithDelay(() -> sitemapResource.receive(itemEvent));
 
         // non-null is sufficient here.
         when(headersMock.getRequestHeader(HTTP_HEADER_X_ATMOSPHERE_TRANSPORT)).thenReturn(List.of());
@@ -291,14 +314,7 @@ public class SitemapResourceTest extends JavaTest {
     public void whenLongPollingShouldObserveItemsFromIconConditions() {
         ItemEvent itemEvent = mock(ItemEvent.class);
         when(itemEvent.getItemName()).thenReturn(iconItem.getName());
-        new Thread(() -> {
-            try {
-                Thread.sleep(STATE_UPDATE_WAIT_TIME); // wait for the #getPageData call and listeners to attach to the
-                                                      // item
-                sitemapResource.receive(itemEvent);
-            } catch (InterruptedException e) {
-            }
-        }).start();
+        executeWithDelay(() -> sitemapResource.receive(itemEvent));
 
         // non-null is sufficient here.
         when(headersMock.getRequestHeader(HTTP_HEADER_X_ATMOSPHERE_TRANSPORT)).thenReturn(List.of());
@@ -307,8 +323,19 @@ public class SitemapResourceTest extends JavaTest {
                 false);
 
         PageDTO pageDTO = (PageDTO) response.getEntity();
-        assertThat(pageDTO.timeout, is(false)); // assert that the item state change did trigger the blocking method to
-                                                // return
+        // assert that the item state change did trigger the blocking method to return
+        assertThat(pageDTO.timeout, is(false));
+    }
+
+    private static void executeWithDelay(Runnable executionWithDelay) {
+        new Thread(() -> {
+            try {
+                // wait for the #getPageData call and listeners to attach to the item
+                Thread.sleep(STATE_UPDATE_WAIT_TIME);
+                executionWithDelay.run();
+            } catch (InterruptedException e) {
+            }
+        }).start();
     }
 
     @Test
@@ -331,18 +358,18 @@ public class SitemapResourceTest extends JavaTest {
         assertThat(pageDTO.widgets, notNullValue());
         assertThat((Collection<?>) pageDTO.widgets, hasSize(3));
 
-        assertThat(pageDTO.widgets.get(0).widgetId, is(WIDGET1_ID));
-        assertThat(pageDTO.widgets.get(0).label, is(WIDGET1_LABEL));
-        assertThat(pageDTO.widgets.get(0).labelSource, is("SITEMAP_WIDGET"));
-        assertThat(pageDTO.widgets.get(0).labelcolor, is("GREEN"));
-        assertThat(pageDTO.widgets.get(0).valuecolor, is("BLUE"));
-        assertThat(pageDTO.widgets.get(0).iconcolor, is("ORANGE"));
-        assertThat(pageDTO.widgets.get(0).icon, is(WIDGET1_ICON));
-        assertThat(pageDTO.widgets.get(0).staticIcon, is(true));
-        assertThat(pageDTO.widgets.get(0).state, nullValue());
-        assertThat(pageDTO.widgets.get(0).item, notNullValue());
-        assertThat(pageDTO.widgets.get(0).item.name, is(ITEM_NAME));
-        assertThat(pageDTO.widgets.get(0).item.state, is("50"));
+        assertThat(pageDTO.widgets.getFirst().widgetId, is(WIDGET1_ID));
+        assertThat(pageDTO.widgets.getFirst().label, is(WIDGET1_LABEL));
+        assertThat(pageDTO.widgets.getFirst().labelSource, is("SITEMAP_WIDGET"));
+        assertThat(pageDTO.widgets.getFirst().labelcolor, is("GREEN"));
+        assertThat(pageDTO.widgets.getFirst().valuecolor, is("BLUE"));
+        assertThat(pageDTO.widgets.getFirst().iconcolor, is("ORANGE"));
+        assertThat(pageDTO.widgets.getFirst().icon, is(WIDGET1_ICON));
+        assertThat(pageDTO.widgets.getFirst().staticIcon, is(true));
+        assertThat(pageDTO.widgets.getFirst().state, nullValue());
+        assertThat(pageDTO.widgets.getFirst().item, notNullValue());
+        assertThat(pageDTO.widgets.getFirst().item.name, is(ITEM_NAME));
+        assertThat(pageDTO.widgets.getFirst().item.state, is("50"));
 
         assertThat(pageDTO.widgets.get(1).widgetId, is(WIDGET2_ID));
         assertThat(pageDTO.widgets.get(1).label, is(ITEM_LABEL));
@@ -370,70 +397,98 @@ public class SitemapResourceTest extends JavaTest {
         assertThat(pageDTO.widgets.get(2).item.state, is("50"));
     }
 
+    private void configureItemUIRegistryWithSubpages(State state1, State state2, State state3)
+            throws ItemNotFoundException {
+        Group group1 = (Group) widgets.getFirst();
+        Group group2 = (Group) widgets.get(4);
+
+        when(itemUIRegistryMock.getChildren(defaultSitemapMock)).thenReturn(new BasicEList<>(List.of(group1, group2)));
+        configureCommonUIRegistryMockMethods();
+        EList<Widget> subpage1Widgets = new BasicEList<>(group1.getChildren());
+
+        configureItemUIRegistryForWidget(group1, FRAME_ID, GROUP_ICON, GROUP_LABEL, WidgetLabelSource.SITEMAP_WIDGET,
+                true, null, null, null, null);
+        when(itemUIRegistryMock.getChildren(group1)).thenReturn(subpage1Widgets);
+
+        configureWidgetStatesPage1(state1, state2);
+
+        EList<Widget> subpage2Widgets = new BasicEList<>(group2.getChildren());
+
+        configureItemUIRegistryForWidget(group2, FRAME_ID, GROUP_ICON, GROUP_LABEL, WidgetLabelSource.SITEMAP_WIDGET,
+                true, null, null, null, null);
+        when(itemUIRegistryMock.getChildren(group2)).thenReturn(subpage2Widgets);
+
+        configureWidgetStatesPage2(state3);
+    }
+
     private void configureItemUIRegistry(State state1, State state2) throws ItemNotFoundException {
-        when(itemUIRegistryMock.getChildren(defaultSitemapMock)).thenReturn(widgets);
+        EList<Widget> mainpageWidgets = new BasicEList<>(widgets.subList(1, 4));
+
+        when(itemUIRegistryMock.getChildren(defaultSitemapMock)).thenReturn(mainpageWidgets);
+        configureCommonUIRegistryMockMethods();
+
+        configureWidgetStatesPage1(state1, state2);
+    }
+
+    private void configureCommonUIRegistryMockMethods() throws ItemNotFoundException {
         when(itemUIRegistryMock.getItem(ITEM_NAME)).thenReturn(item);
         when(itemUIRegistryMock.getItem(VISIBILITY_RULE_ITEM_NAME)).thenReturn(visibilityRuleItem);
         when(itemUIRegistryMock.getItem(LABEL_COLOR_ITEM_NAME)).thenReturn(labelColorItem);
         when(itemUIRegistryMock.getItem(VALUE_COLOR_ITEM_NAME)).thenReturn(valueColorItem);
         when(itemUIRegistryMock.getItem(ICON_COLOR_ITEM_NAME)).thenReturn(iconColorItem);
         when(itemUIRegistryMock.getItem(ICON_ITEM_NAME)).thenReturn(iconItem);
+    }
 
-        when(itemUIRegistryMock.getWidgetId(widgets.get(0))).thenReturn(WIDGET1_ID);
-        when(itemUIRegistryMock.getCategory(widgets.get(0))).thenReturn(WIDGET1_ICON);
-        when(itemUIRegistryMock.getLabel(widgets.get(0))).thenReturn(WIDGET1_LABEL);
-        when(itemUIRegistryMock.getLabelSource(widgets.get(0))).thenReturn(WidgetLabelSource.SITEMAP_WIDGET);
-        when(itemUIRegistryMock.getVisiblity(widgets.get(0))).thenReturn(true);
-        when(itemUIRegistryMock.getLabelColor(widgets.get(0))).thenReturn("GREEN");
-        when(itemUIRegistryMock.getValueColor(widgets.get(0))).thenReturn("BLUE");
-        when(itemUIRegistryMock.getIconColor(widgets.get(0))).thenReturn("ORANGE");
-        when(itemUIRegistryMock.getState(widgets.get(0))).thenReturn(state1);
+    private void configureWidgetStatesPage1(State state1, State state2) {
+        EList<Widget> mainpageWidgets = new BasicEList<>(widgets.subList(1, 4));
+        Widget w1 = mainpageWidgets.getFirst();
+        configureItemUIRegistryForWidget(w1, WIDGET1_ID, WIDGET1_ICON, WIDGET1_LABEL, WidgetLabelSource.SITEMAP_WIDGET,
+                true, "GREEN", "BLUE", "ORANGE", state1);
 
-        when(itemUIRegistryMock.getWidgetId(widgets.get(1))).thenReturn(WIDGET2_ID);
-        when(itemUIRegistryMock.getCategory(widgets.get(1))).thenReturn(WIDGET2_ICON);
-        when(itemUIRegistryMock.getLabel(widgets.get(1))).thenReturn(ITEM_LABEL);
-        when(itemUIRegistryMock.getLabelSource(widgets.get(1))).thenReturn(WidgetLabelSource.ITEM_LABEL);
-        when(itemUIRegistryMock.getVisiblity(widgets.get(1))).thenReturn(true);
-        when(itemUIRegistryMock.getLabelColor(widgets.get(1))).thenReturn(null);
-        when(itemUIRegistryMock.getValueColor(widgets.get(1))).thenReturn(null);
-        when(itemUIRegistryMock.getIconColor(widgets.get(1))).thenReturn(null);
-        when(itemUIRegistryMock.getState(widgets.get(1))).thenReturn(state2);
+        Widget w2 = mainpageWidgets.get(1);
+        configureItemUIRegistryForWidget(w2, WIDGET2_ID, WIDGET2_ICON, ITEM_LABEL, WidgetLabelSource.ITEM_LABEL, true,
+                null, null, null, state2);
 
-        when(itemUIRegistryMock.getWidgetId(widgets.get(2))).thenReturn(WIDGET3_ID);
-        when(itemUIRegistryMock.getCategory(widgets.get(2))).thenReturn(WIDGET3_ICON);
-        when(itemUIRegistryMock.getLabel(widgets.get(2))).thenReturn(WIDGET3_LABEL);
-        when(itemUIRegistryMock.getLabelSource(widgets.get(2))).thenReturn(WidgetLabelSource.SITEMAP_WIDGET);
-        when(itemUIRegistryMock.getVisiblity(widgets.get(2))).thenReturn(true);
-        when(itemUIRegistryMock.getLabelColor(widgets.get(2))).thenReturn(null);
-        when(itemUIRegistryMock.getValueColor(widgets.get(2))).thenReturn(null);
-        when(itemUIRegistryMock.getIconColor(widgets.get(2))).thenReturn(null);
-        when(itemUIRegistryMock.getState(widgets.get(2))).thenReturn(state2);
+        Widget w3 = mainpageWidgets.get(2);
+        configureItemUIRegistryForWidget(w3, WIDGET3_ID, WIDGET3_ICON, WIDGET3_LABEL, WidgetLabelSource.SITEMAP_WIDGET,
+                true, null, null, null, state2);
+    }
+
+    private void configureWidgetStatesPage2(State state3) {
+        Widget w4 = widgets.get(5);
+        configureItemUIRegistryForWidget(w4, WIDGET4_ID, WIDGET4_ICON, WIDGET4_LABEL, WidgetLabelSource.SITEMAP_WIDGET,
+                true, null, null, null, state3);
+    }
+
+    private void configureItemUIRegistryForWidget(Widget w, String widgetId, String widgetIcon, String widgetLabel,
+            WidgetLabelSource widgetLabelSource, boolean visibility, String labelColor, String valueColor,
+            String iconColor, State state) {
+        when(itemUIRegistryMock.getWidgetId(w)).thenReturn(widgetId);
+        when(itemUIRegistryMock.getCategory(w)).thenReturn(widgetIcon);
+        when(itemUIRegistryMock.getLabel(w)).thenReturn(widgetLabel);
+        when(itemUIRegistryMock.getLabelSource(w)).thenReturn(widgetLabelSource);
+        when(itemUIRegistryMock.getVisiblity(w)).thenReturn(visibility);
+        when(itemUIRegistryMock.getLabelColor(w)).thenReturn(labelColor);
+        when(itemUIRegistryMock.getValueColor(w)).thenReturn(valueColor);
+        when(itemUIRegistryMock.getIconColor(w)).thenReturn(iconColor);
+        when(itemUIRegistryMock.getState(w)).thenReturn(state);
     }
 
     private EList<Widget> initSitemapWidgets() {
         // Initialize a sitemap containing 2 widgets linked to the same number item,
-        // one slider and one switch
-
-        Widget w1 = mock(Widget.class);
-        EClass sliderEClass = mock(EClass.class);
-        when(sliderEClass.getName()).thenReturn("slider");
-        when(sliderEClass.getInstanceTypeName()).thenReturn("org.openhab.core.model.sitemap.Slider");
-        when(w1.eClass()).thenReturn(sliderEClass);
-        when(w1.getLabel()).thenReturn(WIDGET1_LABEL);
-        when(w1.getItem()).thenReturn(ITEM_NAME);
-        when(w1.getIcon()).thenReturn(null);
-        when(w1.getStaticIcon()).thenReturn(null);
+        // one slider and one switch,
+        // which has one subpage
 
         // add icon rules to the mock widget:
-        IconRule iconRule = mock(IconRule.class);
+        Class<IconRule> classToMock = IconRule.class;
+        IconRule iconRule = mock(classToMock);
         Condition conditon0 = mock(Condition.class);
         when(conditon0.getItem()).thenReturn(ICON_ITEM_NAME);
         EList<Condition> conditions0 = new BasicEList<>();
         conditions0.add(conditon0);
         when(iconRule.getConditions()).thenReturn(conditions0);
-        EList<IconRule> iconRules = new BasicEList<>();
-        iconRules.add(iconRule);
-        when(w1.getIconRules()).thenReturn(iconRules);
+        EList<IconRule> iconRulesW1 = new BasicEList<>();
+        iconRulesW1.add(iconRule);
 
         // add visibility rules to the mock widget:
         VisibilityRule visibilityRule = mock(VisibilityRule.class);
@@ -442,9 +497,8 @@ public class SitemapResourceTest extends JavaTest {
         EList<Condition> conditions = new BasicEList<>();
         conditions.add(conditon);
         when(visibilityRule.getConditions()).thenReturn(conditions);
-        EList<VisibilityRule> visibilityRules = new BasicEList<>(1);
-        visibilityRules.add(visibilityRule);
-        when(w1.getVisibility()).thenReturn(visibilityRules);
+        EList<VisibilityRule> visibilityRulesW1 = new BasicEList<>(1);
+        visibilityRulesW1.add(visibilityRule);
 
         // add label color conditions to the item:
         ColorArray labelColor = mock(ColorArray.class);
@@ -453,9 +507,8 @@ public class SitemapResourceTest extends JavaTest {
         EList<Condition> conditions1 = new BasicEList<>();
         conditions1.add(conditon1);
         when(labelColor.getConditions()).thenReturn(conditions1);
-        EList<ColorArray> labelColors = new BasicEList<>();
-        labelColors.add(labelColor);
-        when(w1.getLabelColor()).thenReturn(labelColors);
+        EList<ColorArray> labelColorsW1 = new BasicEList<>();
+        labelColorsW1.add(labelColor);
 
         // add value color conditions to the item:
         ColorArray valueColor = mock(ColorArray.class);
@@ -464,9 +517,8 @@ public class SitemapResourceTest extends JavaTest {
         EList<Condition> conditions2 = new BasicEList<>();
         conditions2.add(conditon2);
         when(valueColor.getConditions()).thenReturn(conditions2);
-        EList<ColorArray> valueColors = new BasicEList<>();
-        valueColors.add(valueColor);
-        when(w1.getValueColor()).thenReturn(valueColors);
+        EList<ColorArray> valueColorsW1 = new BasicEList<>();
+        valueColorsW1.add(valueColor);
 
         // add icon color conditions to the item:
         ColorArray iconColor = mock(ColorArray.class);
@@ -475,48 +527,105 @@ public class SitemapResourceTest extends JavaTest {
         EList<Condition> conditions3 = new BasicEList<>();
         conditions3.add(conditon3);
         when(iconColor.getConditions()).thenReturn(conditions3);
+        EList<ColorArray> iconColorsW1 = new BasicEList<>();
+        iconColorsW1.add(iconColor);
+
+        EClass sliderEClass = mockEClass("slider", "org.openhab.core.model.sitemap.Slider");
+
+        Widget w1 = mockWidget(iconRulesW1, visibilityRulesW1, labelColorsW1, valueColorsW1, iconColorsW1, sliderEClass,
+                WIDGET1_LABEL, null, null);
+
+        EList<IconRule> iconRules = new BasicEList<>();
+        EList<VisibilityRule> visibilityRules = new BasicEList<>();
+        EList<ColorArray> labelColors = new BasicEList<>();
+        EList<ColorArray> valueColors = new BasicEList<>();
         EList<ColorArray> iconColors = new BasicEList<>();
-        iconColors.add(iconColor);
-        when(w1.getIconColor()).thenReturn(iconColors);
 
-        iconRules = new BasicEList<>();
-        visibilityRules = new BasicEList<>();
-        labelColors = new BasicEList<>();
-        valueColors = new BasicEList<>();
-        iconColors = new BasicEList<>();
+        EClass switchEClass = mockEClass("switch", "org.openhab.core.model.sitemap.Switch");
 
-        Widget w2 = mock(Widget.class);
-        EClass switchEClass = mock(EClass.class);
-        when(switchEClass.getName()).thenReturn("switch");
-        when(switchEClass.getInstanceTypeName()).thenReturn("org.openhab.core.model.sitemap.Switch");
-        when(w2.eClass()).thenReturn(switchEClass);
-        when(w2.getLabel()).thenReturn(null);
-        when(w2.getItem()).thenReturn(ITEM_NAME);
-        when(w2.getIcon()).thenReturn(WIDGET2_ICON);
-        when(w2.getStaticIcon()).thenReturn(null);
-        when(w2.getIconRules()).thenReturn(iconRules);
-        when(w2.getVisibility()).thenReturn(visibilityRules);
-        when(w2.getLabelColor()).thenReturn(labelColors);
-        when(w2.getValueColor()).thenReturn(valueColors);
-        when(w2.getIconColor()).thenReturn(iconColors);
+        Widget w2 = mockWidget(iconRules, visibilityRules, labelColors, valueColors, iconColors, switchEClass, null,
+                WIDGET2_ICON, null);
+        mock(Widget.class);
 
-        Widget w3 = mock(Widget.class);
-        when(w3.eClass()).thenReturn(switchEClass);
-        when(w3.getLabel()).thenReturn(WIDGET3_LABEL);
-        when(w3.getItem()).thenReturn(ITEM_NAME);
-        when(w3.getIcon()).thenReturn(null);
-        when(w3.getStaticIcon()).thenReturn(WIDGET3_ICON);
-        when(w3.getIconRules()).thenReturn(iconRules);
-        when(w3.getVisibility()).thenReturn(visibilityRules);
-        when(w3.getLabelColor()).thenReturn(labelColors);
-        when(w3.getValueColor()).thenReturn(valueColors);
-        when(w3.getIconColor()).thenReturn(iconColors);
+        Widget w3 = mockWidget(iconRules, visibilityRules, labelColors, valueColors, iconColors, switchEClass,
+                WIDGET3_LABEL, null, WIDGET3_ICON);
 
         EList<Widget> widgets = new BasicEList<>(3);
         widgets.add(w1);
         widgets.add(w2);
         widgets.add(w3);
         return widgets;
+    }
+
+    private EList<Widget> initSitemapWidgetsWithSubpages() {
+        EList<Widget> baseWidgets = initSitemapWidgets();
+
+        EClass groupEClass = mockEClass("group", "org.openhab.core.model.sitemap.Group");
+
+        EList<IconRule> iconRules = new BasicEList<>();
+        EList<VisibilityRule> visibilityRules = new BasicEList<>();
+        EList<ColorArray> labelColors = new BasicEList<>();
+        EList<ColorArray> valueColors = new BasicEList<>();
+        EList<ColorArray> iconColors = new BasicEList<>();
+
+        Widget group1 = mockGroup(iconRules, visibilityRules, labelColors, valueColors, iconColors, groupEClass,
+                GROUP_LABEL, null, GROUP_ICON, baseWidgets);
+
+        EClass switchEClass = mockEClass("switch", "org.openhab.core.model.sitemap.Switch");
+
+        Widget w4 = mockWidget(iconRules, visibilityRules, labelColors, valueColors, iconColors, switchEClass,
+                WIDGET4_LABEL, null, WIDGET4_ICON);
+
+        Widget group2 = mockGroup(iconRules, visibilityRules, labelColors, valueColors, iconColors, groupEClass,
+                GROUP_LABEL, null, GROUP_ICON, new BasicEList<>(List.of(w4)));
+
+        EList<Widget> allWidgets = new BasicEList<>();
+        allWidgets.add(group1);
+        allWidgets.addAll(baseWidgets);
+        allWidgets.add(group2);
+        allWidgets.add(w4);
+        return allWidgets;
+    }
+
+    private static EClass mockEClass(String eClassName, String eClassInstanceName) {
+        EClass sliderEClass = mock(EClass.class);
+        when(sliderEClass.getName()).thenReturn(eClassName);
+        when(sliderEClass.getInstanceTypeName()).thenReturn(eClassInstanceName);
+        return sliderEClass;
+    }
+
+    private static Widget mockWidget(EList<IconRule> iconRules1, EList<VisibilityRule> visibilityRules1,
+            EList<ColorArray> labelColors1, EList<ColorArray> valueColors1, EList<ColorArray> iconColors1,
+            EClass eClass, String widgetLabel, String widgetIcon, String widgetStaticIcon) {
+        Widget w = mock(Widget.class);
+        mockWidgetMethods(iconRules1, visibilityRules1, labelColors1, valueColors1, iconColors1, eClass, widgetLabel,
+                widgetIcon, widgetStaticIcon, w);
+        when(w.getItem()).thenReturn(ITEM_NAME);
+        return w;
+    }
+
+    private static Group mockGroup(EList<IconRule> iconRules1, EList<VisibilityRule> visibilityRules1,
+            EList<ColorArray> labelColors1, EList<ColorArray> valueColors1, EList<ColorArray> iconColors1,
+            EClass eClass, String widgetLabel, String widgetIcon, String widgetStaticIcon, EList<Widget> children) {
+        Group w = mock(Group.class);
+        mockWidgetMethods(iconRules1, visibilityRules1, labelColors1, valueColors1, iconColors1, eClass, widgetLabel,
+                widgetIcon, widgetStaticIcon, w);
+        when(w.getChildren()).thenReturn(children);
+        return w;
+    }
+
+    private static void mockWidgetMethods(EList<IconRule> iconRules1, EList<VisibilityRule> visibilityRules1,
+            EList<ColorArray> labelColors1, EList<ColorArray> valueColors1, EList<ColorArray> iconColors1,
+            EClass eClass, String widgetLabel, String widgetIcon, String widgetStaticIcon, Widget w) {
+        when(w.eClass()).thenReturn(eClass);
+        when(w.getLabel()).thenReturn(widgetLabel);
+        when(w.getIcon()).thenReturn(widgetIcon);
+        when(w.getStaticIcon()).thenReturn(widgetStaticIcon);
+        when(w.getIconRules()).thenReturn(iconRules1);
+        when(w.getVisibility()).thenReturn(visibilityRules1);
+        when(w.getLabelColor()).thenReturn(labelColors1);
+        when(w.getValueColor()).thenReturn(valueColors1);
+        when(w.getIconColor()).thenReturn(iconColors1);
     }
 
     private void configureSitemapMock() {
