@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -440,7 +440,7 @@ public class SmokeTest extends IntegrationTestSupport {
                 assertThat(response.getFunctionCode(), is(equalTo(15)));
 
                 assertThat(modbustRequestCaptor.getAllReturnValues().size(), is(equalTo(1)));
-                ModbusRequest request = modbustRequestCaptor.getAllReturnValues().get(0);
+                ModbusRequest request = modbustRequestCaptor.getAllReturnValues().getFirst();
                 assertThat(request.getFunctionCode(), is(equalTo(15)));
                 assertThat(((WriteMultipleCoilsRequest) request).getReference(), is(equalTo(3)));
                 assertThat(((WriteMultipleCoilsRequest) request).getBitCount(), is(equalTo(bits.size())));
@@ -481,7 +481,7 @@ public class SmokeTest extends IntegrationTestSupport {
             assertInstanceOf(ModbusSlaveErrorResponseException.class, lastError.get(), lastError.toString());
 
             assertThat(modbustRequestCaptor.getAllReturnValues().size(), is(equalTo(1)));
-            ModbusRequest request = modbustRequestCaptor.getAllReturnValues().get(0);
+            ModbusRequest request = modbustRequestCaptor.getAllReturnValues().getFirst();
             assertThat(request.getFunctionCode(), is(equalTo(15)));
             assertThat(((WriteMultipleCoilsRequest) request).getReference(), is(equalTo(3)));
             assertThat(((WriteMultipleCoilsRequest) request).getBitCount(), is(equalTo(bits.size())));
@@ -520,7 +520,7 @@ public class SmokeTest extends IntegrationTestSupport {
             assertThat(response.getFunctionCode(), is(equalTo(5)));
 
             assertThat(modbustRequestCaptor.getAllReturnValues().size(), is(equalTo(1)));
-            ModbusRequest request = modbustRequestCaptor.getAllReturnValues().get(0);
+            ModbusRequest request = modbustRequestCaptor.getAllReturnValues().getFirst();
             assertThat(request.getFunctionCode(), is(equalTo(5)));
             assertThat(((WriteCoilRequest) request).getReference(), is(equalTo(3)));
             assertThat(((WriteCoilRequest) request).getCoil(), is(equalTo(true)));
@@ -558,7 +558,7 @@ public class SmokeTest extends IntegrationTestSupport {
             assertInstanceOf(ModbusSlaveErrorResponseException.class, lastError.get(), lastError.toString());
 
             assertThat(modbustRequestCaptor.getAllReturnValues().size(), is(equalTo(1)));
-            ModbusRequest request = modbustRequestCaptor.getAllReturnValues().get(0);
+            ModbusRequest request = modbustRequestCaptor.getAllReturnValues().getFirst();
             assertThat(request.getFunctionCode(), is(equalTo(5)));
             assertThat(((WriteCoilRequest) request).getReference(), is(equalTo(300)));
             assertThat(((WriteCoilRequest) request).getCoil(), is(equalTo(true)));
@@ -813,7 +813,7 @@ public class SmokeTest extends IntegrationTestSupport {
 
         EndpointPoolConfiguration newConfig = new EndpointPoolConfiguration();
         newConfig.setConnectMaxTries(5);
-        try (ModbusCommunicationInterface comms = modbusManager.newModbusCommunicationInterface(getEndpoint(),
+        try (ModbusCommunicationInterface unused = modbusManager.newModbusCommunicationInterface(getEndpoint(),
                 newConfig)) {
             // Sets configuration for the endpoint implicitly
         }
@@ -822,7 +822,8 @@ public class SmokeTest extends IntegrationTestSupport {
         assertThat(modbusManager.getEndpointPoolConfiguration(getEndpoint()), is(not(equalTo(defaultConfig))));
 
         // Reset config
-        try (ModbusCommunicationInterface comms = modbusManager.newModbusCommunicationInterface(getEndpoint(), null)) {
+        try (ModbusCommunicationInterface ignored = modbusManager.newModbusCommunicationInterface(getEndpoint(),
+                null)) {
             // Sets configuration for the endpoint implicitly
         }
         // Should match the default
@@ -863,7 +864,7 @@ public class SmokeTest extends IntegrationTestSupport {
                 long openSocketsAfter = getNumberOfOpenClients(SOCKET_SPY);
                 assertThat(openSocketsAfter, is(equalTo(1L)));
             });
-            try (ModbusCommunicationInterface comms2 = modbusManager.newModbusCommunicationInterface(endpoint,
+            try (ModbusCommunicationInterface ignored = modbusManager.newModbusCommunicationInterface(endpoint,
                     config)) {
                 {
                     CountDownLatch latch = new CountDownLatch(1);
@@ -994,8 +995,8 @@ public class SmokeTest extends IntegrationTestSupport {
                 Method socketImplCreateMethod = socketImplClass.getDeclaredMethod("createPlatformSocketImpl",
                         boolean.class);
                 socketImplCreateMethod.setAccessible(true);
-                Object socketImpl = socketImplCreateMethod.invoke(/* null since we deal with static method */ null,
-                        /* server */false);
+                Object socketImpl = socketImplCreateMethod
+                        .invoke(/* null since we deal with static method */ giveNull(), /* server */false);
 
                 Constructor<?> socksSocketImplConstructor = socksSocketImplClass
                         .getDeclaredConstructor(socketImplClass);
