@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -210,7 +210,7 @@ public class ThingManagerImpl implements ReadyTracker, ThingManager, ThingTracke
 
         this.thingRegistry.addThingTracker(this);
         readyService.registerTracker(this, new ReadyMarkerFilter().withType(StartLevelService.STARTLEVEL_MARKER_TYPE)
-                .withIdentifier(Integer.toString(StartLevelService.STARTLEVEL_MODEL)));
+                .withIdentifier(Integer.toString(StartLevelService.STARTLEVEL_STATES)));
     }
 
     @Deactivate
@@ -1093,7 +1093,7 @@ public class ThingManagerImpl implements ReadyTracker, ThingManager, ThingTracke
         ThingBuilder thingBuilder = thing instanceof Bridge bridge ? BridgeBuilder.create(bridge)
                 : ThingBuilder.create(thing);
         instructions.forEach(instruction -> instruction.perform(thing, thingBuilder));
-        int newThingTypeVersion = instructions.get(instructions.size() - 1).getThingTypeVersion();
+        int newThingTypeVersion = instructions.getLast().getThingTypeVersion();
         thingBuilder.withProperty(PROPERTY_THING_TYPE_VERSION, String.valueOf(newThingTypeVersion));
         logger.info("Updating '{}' from version {} to {}", thing.getUID(), currentThingTypeVersion,
                 newThingTypeVersion);
