@@ -1,5 +1,5 @@
-/**
- * Copyright (c) 2010-2024 Contributors to the openHAB project
+/*
+ * Copyright (c) 2010-2025 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -569,7 +569,7 @@ public class SafeCallerImplTest extends JavaTest {
      */
     private void joinAll() throws InterruptedException {
         while (!threads.isEmpty()) {
-            AssertingThread t = threads.remove(0);
+            AssertingThread t = threads.removeFirst();
             t.join();
             if (t.assertionError != null) {
                 throw t.assertionError;
